--- a/F23.Aspire.Hosting.Sftp/F23.Aspire.Hosting.Sftp.csproj
+++ b/F23.Aspire.Hosting.Sftp/F23.Aspire.Hosting.Sftp.csproj
@@ -14,7 +14,12 @@
     <IsPackable>true</IsPackable>
     <Version>0.0.0</Version>
     <Company>feature[23]</Company>
+    <Copyright>Copyright (c) feature[23] 2025</Copyright>
     <Authors>Paul Irwin</Authors>
+    <PackageIcon>logo.png</PackageIcon>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <IncludeSymbols>true</IncludeSymbols>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
   </PropertyGroup>
   
   <ItemGroup>
@@ -23,6 +28,11 @@
 
   <ItemGroup>
     <PackageReference Include="Aspire.Hosting" Version="13.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="../logo.png" Pack="true" PackagePath="\" />
+    <None Include="../README.md" Pack="true" PackagePath="\" />
   </ItemGroup>
 
 </Project>
